--- a/modules/os/hieradata/Debian.yaml
+++ b/modules/os/hieradata/Debian.yaml
@@ -5,22 +5,22 @@ os::package:
 
 os::packages:
   # java6:    # '1.6.0.41'
-    # name: java-1.6.0-openjdk
+    # package: java-1.6.0-openjdk
   # java7:    # '1.7.0.171'
-    # name: java-1.7.0-openjdk
+    # package: java-1.7.0-openjdk
   # java8:    # '1.8.0.161'
     # &java_default
-    # name: java-1.8.0-openjdk
+    # package: java-1.8.0-openjdk
   # java:
     # <<: *java_default
   # jre:      # Oracle's last unencumbered release available in standard repos
-    # name: jre1.8.0_131
+    # package: jre1.8.0_131
     # #<<: *java_default
   # jdk6:
-    # name: java-1.6.0-openjdk-devel
+    # package: java-1.6.0-openjdk-devel
   # jdk7:
-    # name: java-1.7.0-openjdk-devel
+    # package: java-1.7.0-openjdk-devel
   # jdk8: &jdk_default
-    # name: java-1.8.0-openjdk-devel
+    # package: java-1.8.0-openjdk-devel
   # jdk:
     # <<: *jdk_default
