--- a/modules/gsajboss6/hieradata/common.yaml
+++ b/modules/gsajboss6/hieradata/common.yaml
@@ -47,43 +47,60 @@ gsajboss6::user:
   shell: "%{lookup('os::default.shell')}"
   comment:
 
-# This is a HIERA self-referential workaround, do NOT use in manifests!
-#FIXME should be %{lookup('os::dirs.opt.path')}
-gsajboss6::root_dir: &root_dir
-  '/opt/sw/jboss'
-  
-gsajboss6::dirs:
-  root:
-    path: *root_dir
-  home:
-    # analogous to CATALINA_HOME for common binary distribution
-    # Can't use lookup(dirs['root']) since that is part of self.
-    #WARN this is brittle
-    path: "%{lookup('gsajboss6::root_dir')}/%{lookup('gsajboss6::install::destdir')}"
-  # alternately and then detect array and glue
-  # - *root_dir
-  # - "jboss-eap-%{lookup('gsajboss6::install::version')}"
-  base:
-    #FIXME should be /var/lib/jboss/<instance> but GSA's scripts will blow up
-  conf:
-    # actually 'conf' like TOMCAT uses?
-    path: "%{lookup('gsajboss6::root_dir')}/gsaconfig"
-  log:
-    #FIXME this path is just wrong
-    path: '/logs/jboss'
+# These are HIERA self-referential workaround, do NOT use in manifests!
+#FIXME should be %{lookup('os::dirs.opt.path')}/$product/$version
+gsajboss6::root_dir: '/opt/sw/jboss'
 
-
-gsajboss6::install::source: "%{lookup('buckets.software')}/jboss"
+# APL friendly, flattened
+gsajboss6::install::product: 'jboss-eap'
 gsajboss6::install::version: 6.4
+#FIXME should be .../[$moduleName]/$product/$version
+gsajboss6::install::source: "%{lookup('buckets.software')}/jboss"
+
 #TODO an array of strings
 gsajboss6::install::package:
     "gsainstall-%{lookup('gsajboss6::install::version')}-2.%{facts.os.architecture}"
 #TODO an array of hashes {name: filename, destdir: blah}
 gsajboss6::install::file:
-    "jboss-eap-%{lookup('gsajboss6::install::version')}_update5.zip"
+    "%{lookup('gsajboss6::install::product')}-%{lookup('gsajboss6::install::version')}_update5.zip"
 gsajboss6::install::destdir:
-    "jboss-eap-%{lookup('gsajboss6::install::version')}"
+    "%{lookup('gsajboss6::root_dir')}/%{lookup('gsajboss6::install::product')}-%{lookup('gsajboss6::install::version')}"
+
+    
+gsajboss6::dirs:
+  root:
+    path: "%{lookup('gsajboss6::rootdir')}"
+  home:
+    # analogous to CATALINA_HOME for shared binary distribution
+    path: &JBOSS_HOME
+      "%{lookup('gsajboss6::install::destdir')}"
+  # alternately and then detect array and glue
+  # - *root_dir
+  # - "jboss-eap-%{lookup('gsajboss6::install::version')}"
+  module:
+    path: "%{lookup('gsajboss6::install::destdir')}/modules"
+    # alternatively /usr/local/jboss/modules?
+
+
+gsajboss6::instance::dirs:
+  base:
+    path: &JBOSS_BASE
+      "%{lookup('gsajboss6::install::destdir')}/standalone"
+  deploy:
+    path: "%{lookup('gsajboss6::install::destdir')}/standalone/deployments"
+  conf:
+    path: "%{lookup('gsajboss6::install::destdir')}/standalone/configuration"
+  log:
+    path: "%{lookup('gsajboss6::install::destdir')}/standalone/log"
+  module:
+    path: "%{lookup('gsajboss6::install::destdir')}/standalone/modules"
   
+    
+#gsajboss6::modules::version: XXX
+#gsajboss6::modules::source: "%{lookup('buckets.software')}/jboss"
+#sajboss6::modules::destdir
+
+
 
 #TODO
 #gsajboss6::keystores::source: "%{lookup('buckets.conf')}/jboss"
@@ -102,8 +119,10 @@ gsajboss6::java::version: 8
 gsajboss6::java::source: "%{lookup('buckets.software')}/java"
 gsajboss6::java::package: ''
 gsajboss6::java::file: server-jre-8u161-linux-x64.tar.gz
-# should be lookup('os::packages.java$version.destdir')
+# should match package or file contents
 gsajboss6::java::destdir: jdk1.8.0_161
+
+
 
 # interesting idea; https://github.com/grasmash/yaml-expander
 # https://stackoverflow.com/questions/2063616/how-to-reference-a-yaml-setting-from-elsewhere-in-the-same-yaml-file
