--- a/modules/os/hieradata/Debian.yaml
+++ b/modules/os/hieradata/Debian.yaml
@@ -2,6 +2,11 @@
 os::distro_compat: "%{facts.distro.codename}"
 os::package:
   suffix: .deb
+  provider: dpkg
+    #s3: dpkg
+    #url: dpkg
+    #local: dpkg
+    #repo: apt
 
 os::packages:
   # java6:    # '1.6.0.41'
